libs/extractor/tests/snapshots/all_tests__extract_static_css_with_media_query-2.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { css } from \"@devup-ui/core\";\n<Box className={css`\n  @media (min-width: 768px) {\n    &:hover {\n      background-color: red;\n    }\n    &:active {\n      background-color: blue;\n    }\n  }\n`}/>;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "blue",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(min-width:768px)",
                        selector: Some(
                            "&:active",
                        ),
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "red",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(min-width:768px)",
                        selector: Some(
                            "&:hover",
                        ),
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<Box className={\"a b\"} />;\n",
}
