libs/extractor/tests/snapshots/all_tests__extract_style_props-4.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Button} from '@devup-ui/core'\n        <Button padding={1} margin={2} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<button className=\"a b\" />;\n",
}
